@@ -122,20 +122,20 @@ public class Trace2DLtd extends ATrace2D implements ITrace2D {
       if (tmpx >= this.m_maxX) {
         tmpx = this.m_maxX;
         this.maxXSearch();
-        this.firePropertyChange(ITrace2D.PROPERTY_MAX_X, new Double(tmpx), new Double(this.m_maxX));
+        this.firePropertyChange(ITrace2D.PROPERTY_MAX_X, Double.valueOf(tmpx), Double.valueOf(this.m_maxX));
       } else if (tmpx <= this.m_minX) {
         tmpx = this.m_minX;
         this.minXSearch();
-        this.firePropertyChange(ITrace2D.PROPERTY_MIN_X, new Double(tmpx), new Double(this.m_minX));
+        this.firePropertyChange(ITrace2D.PROPERTY_MIN_X, Double.valueOf(tmpx), Double.valueOf(this.m_minX));
       }
       if (tmpy >= this.m_maxY) {
         tmpy = this.m_maxY;
         this.maxYSearch();
-        this.firePropertyChange(ITrace2D.PROPERTY_MAX_Y, new Double(tmpy), new Double(this.m_maxY));
+        this.firePropertyChange(ITrace2D.PROPERTY_MAX_Y, Double.valueOf(tmpy), Double.valueOf(this.m_maxY));
       } else if (tmpy <= this.m_minY) {
         tmpy = this.m_minY;
         this.minYSearch();
-        this.firePropertyChange(ITrace2D.PROPERTY_MIN_Y, new Double(tmpy), new Double(this.m_minY));
+        this.firePropertyChange(ITrace2D.PROPERTY_MIN_Y, Double.valueOf(tmpy), Double.valueOf(this.m_minY));
       }
       // scale the new point, check for new bounds!
       this.firePointAdded(p);
@@ -292,29 +292,29 @@ public class Trace2DLtd extends ATrace2D implements ITrace2D {
         final double xmin = this.m_minX;
         this.minXSearch();
         if (this.m_minX != xmin) {
-          this.firePropertyChange(ITrace2D.PROPERTY_MIN_X, new Double(xmin),
-              new Double(this.m_minX));
+          this.firePropertyChange(ITrace2D.PROPERTY_MIN_X, Double.valueOf(xmin),
+              Double.valueOf(this.m_minX));
         }
 
         final double xmax = this.m_maxX;
         this.maxXSearch();
         if (this.m_maxX != xmax) {
-          this.firePropertyChange(ITrace2D.PROPERTY_MAX_X, new Double(xmax),
-              new Double(this.m_maxX));
+          this.firePropertyChange(ITrace2D.PROPERTY_MAX_X, Double.valueOf(xmax),
+              Double.valueOf(this.m_maxX));
         }
 
         final double ymax = this.m_maxY;
         this.maxYSearch();
         if (this.m_maxY != ymax) {
-          this.firePropertyChange(ITrace2D.PROPERTY_MAX_Y, new Double(ymax),
-              new Double(this.m_maxY));
+          this.firePropertyChange(ITrace2D.PROPERTY_MAX_Y, Double.valueOf(ymax),
+              Double.valueOf(this.m_maxY));
         }
 
         final double ymin = this.m_minY;
         this.minYSearch();
         if (this.m_minY != ymin) {
-          this.firePropertyChange(ITrace2D.PROPERTY_MIN_Y, new Double(ymin),
-              new Double(this.m_minY));
+          this.firePropertyChange(ITrace2D.PROPERTY_MIN_Y, Double.valueOf(ymin),
+              Double.valueOf(this.m_minY));
         }
       }
     }
